feat: 环境搭建、数据表建模

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
+server:
+  port: 9527
 
+spring:
+  profiles:
+    active: ${env}
+  application:
+    name: randomMeme
+
+mybatis-plus:
+  mapper-locations: classpath:mapping/*Mapper.xml
+  type-aliases-package: com.randommeme.entity
