--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <lombok.version>1.18.20</lombok.version>
         <velocity.version>2.3</velocity.version>
+        <pagehelper.version>1.3.0</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -85,6 +86,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
     </dependencies>
 
